# backend-janitor

./: .gitignore  README.md  requirements.txt
configs/: janitor-config.yaml  ruff.toml  semgrep-rules.yaml
contextshard/: BENCHMARK_RESULTS.txt  debug_comparison.py  generate_large_codebase.py  pyproject.toml  run_comparison.py  run_large_benchmark.py  run_live_benchmark.py
contextshard/contextshard/: __init__.py  coordinator.py  instance.py  sync.py
contextshard/contextshard/bridge/: __init__.py  cshard.py
contextshard/contextshard/llm/: __init__.py  base.py  deepseek.py  openai_provider.py
contextshard/contextshard/models/: __init__.py  context.py  result.py  shard.py
contextshard/cshard/: go.mod  main.go
contextshard/cshard/cmd/: index.go  root.go  shard.go  tokens.go
contextshard/tests/: conftest.py
docs/: usage.md
plans/: context-shard-library.md  semantic-duplication-finder.md
recipes/: full-janitor.yaml  security-scan.yaml  tech-debt-scan.yaml
recipes/subrecipes/: create-pr.yaml  fix-and-test.yaml  scan-and-prioritize.yaml
scripts/: backend-janitor
tests/: __init__.py  conftest.py
tools/: __init__.py  cli_runner.py  complexity_analyzer.py  duplication_finder.py  large_codebase_analyzer.py  pr_creator.py  prioritizer.py  ruff_analyzer.py  semgrep_scanner.py
