[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextshard"
version = "0.1.0"
description = "FSDP-style distributed LLM analysis for large codebases"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Backend Janitor Team"}
]
keywords = ["llm", "distributed", "codebase", "analysis", "fsdp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
contextshard = "contextshard.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["contextshard*"]

[tool.setuptools.package-data]
contextshard = ["bin/*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
